# squeaker_rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  Server.toml  docker-compose.yml
migrations/2022-12-08-084559_create_msgs/: down.sql  up.sql
src/: error.rs  main.rs  settings.rs
src/database/: connection.rs  models.rs  schema.rs
src/routes/: health.rs  like.rs  mod.rs  msg.rs  msgs.rs
