[package]
name = "squeaker_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
r2d2 = "0.8.10"
actix-settings = "0.6.0"
config = "0.13.3"
env_logger = "0.10"
actix-web-prom = "0.6.0"
derive_more = "0.99.17"